More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -50,14 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'NoneType' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#W2sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m             cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#W2sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         cache[n] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m cnt\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#W2sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(f(N))\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 3\u001b[0m in \u001b[0;36mf\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#W2sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m9\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#W2sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#W2sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m cache[n] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39;49m cnt\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'int'"
      ]
     }
    ],
@@ -67,17 +72,13 @@
     "N = int(input())\n",
     "cache = [0] * 101\n",
     "cache[1] = 9\n",
-    "cache[2] = 17\n",
-    "\n",
     "\n",
     "def f(n):\n",
     "    cnt = 0\n",
-    "    if n >= 3:    \n",
-    "        for _ in range(1, 9):\n",
-    "            cnt += 1        \n",
-    "        if not cache[n]:\n",
-    "            cache[n] = (f(n-1) + cnt) * 2\n",
-    "        \n",
+    "    if not cache[n]:\n",
+    "        for i in range(1, 9):\n",
+    "            cnt += 1\n",
+    "        cache[n] = f(n-1) + cnt\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
