--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,9 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "MOD = 1_000_000_000\n",
     "\n",
@@ -95,8 +104,12 @@
     "    cnt = 0\n",
     "    if not cache[n]:\n",
     "        for i in range(10):\n",
-    "            cnt += 1\n",
-    "        cache[n] = f(n-1) + cnt\n",
+    "            if 1 <= i <=8:\n",
+    "                cnt += 2\n",
+    "            else:\n",
+    "                continue\n",
+    "        print(cnt)\n",
+    "        cache[n] = f(n-1) + cnt + n\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
