More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n",
-      "25\n"
+      "f(n-1) : 9,  cnt : 16\n",
+      "27\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "                cnt += 2\n",
     "            else:\n",
     "                continue\n",
-    "        print(cnt)\n",
+    "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
     "        cache[n] = f(n-1) + cnt + n\n",
     "    return cache[n]\n",
     "\n",
