More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f(n-1) : 9,  cnt : 16\n",
+      "n : 2,  f(n-1) : 9,  cnt : 16\n",
       "27\n"
      ]
     }
@@ -108,8 +108,8 @@
     "                cnt += 2\n",
     "            else:\n",
     "                continue\n",
-    "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
-    "        cache[n] = f(n-1) + cnt + n\n",
+    "        print(f\"n : {n},  cnt : {cnt}\")\n",
+    "        cache[n] = cnt + n\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
