--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 2,  f(n-1) : 9,  cnt : 16\n",
-      "27\n"
+      "n : 2,  cnt : 16\n",
+      "18\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "            else:\n",
     "                continue\n",
     "        print(f\"n : {n},  cnt : {cnt}\")\n",
-    "        cache[n] = cnt + n\n",
+    "        cache[n] = cnt + (n-1)\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
