--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 2,  cnt : 16\n",
+      "n : 2,  cnt : 8\n",
       "18\n"
      ]
     }
@@ -105,11 +105,11 @@
     "    if not cache[n]:\n",
     "        for i in range(10):\n",
     "            if 1 <= i <=8:\n",
-    "                cnt += 2\n",
+    "                cnt += 1\n",
     "            else:\n",
     "                continue\n",
-    "        print(f\"n : {n},  cnt : {cnt}\")\n",
-    "        cache[n] = cnt + (n-1)\n",
+    "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
+    "        cache[n] = f(n-1) + cnt + (n-1)\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
