More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,15 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 2,  cnt : 8\n",
-      "18\n"
+      "n : 2,  f(n-1) : 9,  cnt : 8\n",
+      "n : 3,  f(n-1) : 18,  cnt : 8\n",
+      "28\n"
      ]
     }
    ],
@@ -110,7 +111,7 @@
     "                cnt += 1\n",
     "\n",
     "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
-    "        cache[n] = f(n-1) + cnt + (n-1)\n",
+    "        cache[n] = f(n-1) + cnt\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
