--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +89,8 @@
      "output_type": "stream",
      "text": [
       "n : 2,  f(n-1) : 9,  cnt : 8\n",
-      "n : 3,  f(n-1) : 18,  cnt : 8\n",
-      "28\n"
+      "n : 3,  f(n-1) : 17,  cnt : 8\n",
+      "25\n"
      ]
     }
    ],
@@ -112,6 +112,43 @@
     "\n",
     "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
     "        cache[n] = f(n-1) + cnt\n",
+    "    return cache[n]\n",
+    "\n",
+    "print(f(N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 2,  f(n-1) : 9,  cnt : 8\n",
+      "n : 3,  f(n-1) : 17,  cnt : 8\n",
+      "n : 4,  f(n-1) : 25,  cnt : 8\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "MOD = 1_000_000_000\n",
+    "\n",
+    "N = int(input())\n",
+    "cache = [0] * 101\n",
+    "cache[1] = 9\n",
+    "\n",
+    "def f(n):\n",
+    "    cnt = 0\n",
+    "    if not cache[n]:\n",
+    "        for i in range(10):\n",
+    "            if 1 <= i <= 8:\n",
+    "                cnt += 1\n",
+    "            cache[n] = f(n-1) + cnt * 2 ** (n-1)\n",
+    "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
+    "        \n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
