--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -152,6 +152,41 @@
     "\n",
     "print(f(N))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MOD = 1_000_000_000\n",
+    "N = int(input())\n",
+    "cache = [0] * 101\n",
+    "\n",
+    "def f(n):\n",
+    "    now = 0\n",
+    "    nxt_upper = 0\n",
+    "    nxt_lower = 0\n",
+    "    \n",
+    "    for i in range(10):\n",
+    "        now = i\n",
+    "        if 1 <= i <= 8:\n",
+    "            nxt_upper = now + 1\n",
+    "            nxt_lower = now - 1\n",
+    "            cnt += 2\n",
+    "        elif i == 0:\n",
+    "            nxt_upper = now + 1\n",
+    "            cnt += 1\n",
+    "            \n",
+    "        else:\n",
+    "            nxt_lower = now - 1\n",
+    "            cnt -= 1\n",
+    "            \n",
+    "    cache[n] = cnt    \n",
+    "    return cache[n]       \n",
+    "    \n",
+    "print(f(N))"
+   ]
   }
  ],
  "metadata": {
