--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -1,191 +1,50 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Bottom up"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "760091136\n"
+      "18404112\n"
      ]
     }
    ],
    "source": [
-    "N = int(input())\n",
-    "cache = [0] * 101\n",
-    "MOD = 1_000_000_000 \n",
-    "cache[1] = 9\n",
+    "MOD = 1_000_000_000\n",
+    "cache = [[0] * 10 for _  in range(101)]\n",
     "\n",
-    "def f(n):        \n",
-    "    if not cache[n]:\n",
-    "        cache[n] = ((f(n-1) * 2) - 2 ** (n-2)) % MOD\n",
+    "# 초기값\n",
+    "for i in range(1, 10):\n",
+    "    cache[1][i] = 1\n",
     "    \n",
-    "    return cache[n]\n",
+    "for i in range(2, 101):\n",
+    "    for j in range(10):\n",
+    "        if j > 0: \n",
+    "            cache[i][j] += cache[i-1][j-1]\n",
+    "            cache[i][j] %= MOD\n",
+    "        if j < 9:\n",
+    "            cache[i][j] += cache[i-1][j+1]\n",
+    "            cache[i][j] %= MOD\n",
     "\n",
-    "print(f(N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(17 * 2) - 2 ** (2-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n"
-     ]
-    }
-   ],
-   "source": [
-    "MOD = 1_000_000_000\n",
-    "\n",
+    "ans = 0\n",
     "N = int(input())\n",
-    "cache = [0] * 101\n",
-    "cache[1] = 9\n",
     "\n",
-    "def f(n):\n",
-    "    cnt = 0\n",
-    "    if not cache[n]:\n",
-    "        for i in range(10):\n",
-    "            cnt += 1\n",
-    "        cache[n] = f(n-1) + cnt\n",
-    "    return cache[n]\n",
+    "for j in range(10):\n",
+    "    ans += cache[N][j]\n",
+    "    ans %= MOD\n",
     "\n",
-    "print(f(N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n : 2,  f(n-1) : 9,  cnt : 8\n",
-      "n : 3,  f(n-1) : 17,  cnt : 8\n",
-      "25\n"
-     ]
-    }
-   ],
-   "source": [
-    "MOD = 1_000_000_000\n",
-    "\n",
-    "N = int(input())\n",
-    "cache = [0] * 101\n",
-    "cache[1] = 9\n",
-    "\n",
-    "def f(n):\n",
-    "    cnt = 0\n",
-    "    if not cache[n]:\n",
-    "        for i in range(10):\n",
-    "            if i == 0 or i == 9:\n",
-    "                continue\n",
-    "            else:\n",
-    "                cnt += 1\n",
-    "\n",
-    "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
-    "        cache[n] = f(n-1) + cnt\n",
-    "    return cache[n]\n",
-    "\n",
-    "print(f(N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n : 2,  f(n-1) : 9,  cnt : 8\n",
-      "n : 3,  f(n-1) : 17,  cnt : 8\n",
-      "33\n"
-     ]
-    }
-   ],
-   "source": [
-    "MOD = 1_000_000_000\n",
-    "\n",
-    "N = int(input())\n",
-    "cache = [0] * 101\n",
-    "cache[1] = 9\n",
-    "\n",
-    "def f(n):\n",
-    "    cnt = 0\n",
-    "    if not cache[n]:\n",
-    "        for i in range(10):\n",
-    "            if 1 <= i <= 8:\n",
-    "                cnt += 1\n",
-    "            cache[n] = f(n-1) + cnt * 2 ** (n-2)\n",
-    "        print(f\"n : {n},  f(n-1) : {f(n-1)},  cnt : {cnt}\")\n",
-    "        \n",
-    "    return cache[n]\n",
-    "\n",
-    "print(f(N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MOD = 1_000_000_000\n",
-    "N = int(input())\n",
-    "cache = [0] * 101\n",
-    "\n",
-    "def f(n):\n",
-    "    now = 0\n",
-    "    nxt_upper = 0\n",
-    "    nxt_lower = 0\n",
-    "    \n",
-    "    for i in range(10):\n",
-    "        now = i\n",
-    "        if 1 <= i <= 8:\n",
-    "            nxt_upper = now + 1\n",
-    "            nxt_lower = now - 1\n",
-    "            cnt += 2\n",
-    "        elif i == 0:\n",
-    "            nxt_upper = now + 1\n",
-    "            cnt += 1\n",
-    "            \n",
-    "        else:\n",
-    "            nxt_lower = now - 1\n",
-    "            cnt -= 1\n",
-    "            \n",
-    "    cache[n] = cnt    \n",
-    "    return cache[n]       \n",
-    "    \n",
-    "print(f(N))"
+    "print(ans)"
    ]
   }
  ],
