--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -59,7 +59,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "MOD = 1_000_000_000\n",
+    "cache = [[0] * 10 for _ in range(101)]\n",
+    "\n",
+    "for i in range(1, 10):\n",
+    "    cache[1][i] = 1\n",
+    "    \n",
+    "N = int(input())\n",
+    "ans = 0\n",
+    "\n",
+    "def f(n, d):\n",
+    "    if not cache[n][d]:             \n",
+    "        if d > 0:                \n",
+    "            cache[n][i] += f(n-1, d-1)\n",
+    "            cache[n][i] %= MOD\n",
+    "        if d < 9:\n",
+    "            cache[n][i] += f(n-1, d+1)\n",
+    "    \n",
+    "for i in range(10):\n",
+    "    ans += cache[N][i]\n",
+    "    ans %= MOD\n",
+    "    \n",
+    "print(ans)"
+   ]
   },
   {
    "cell_type": "code",
