More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -56,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
@@ -72,10 +80,13 @@
     "def f(n, d):\n",
     "    if not cache[n][d]:             \n",
     "        if d > 0:                \n",
-    "            cache[n][i] += f(n-1, d-1)\n",
-    "            cache[n][i] %= MOD\n",
+    "            cache[n][d] += f(n-1, d-1)\n",
+    "            cache[n][d] %= MOD\n",
     "        if d < 9:\n",
-    "            cache[n][i] += f(n-1, d+1)\n",
+    "            cache[n][d] += f(n-1, d+1)\n",
+    "            cache[n][d] %= MOD\n",
+    "    \n",
+    "    return cache[n][d]\n",
     "    \n",
     "for i in range(10):\n",
     "    ans += cache[N][i]\n",
