--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -97,9 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "MOD = 1_000_000_000\n",
     "cache = [[0] * 10 for _ in range(101)]\n",
@@ -120,6 +128,42 @@
     "            cache[n][d] %= MOD\n",
     "        elif d == 9:\n",
     "            cache[n][d] += f(n-1, d-1)\n",
+    "            cache[n][d] %= MOD\n",
+    "    \n",
+    "    return cache[n][d]\n",
+    "    \n",
+    "for i in range(10):\n",
+    "    ans += cache[N][i]\n",
+    "    ans %= MOD\n",
+    "    \n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MOD = 1_000_000_000\n",
+    "cache = [[0] * 10 for _ in range(101)]\n",
+    "\n",
+    "for i in range(1, 10):\n",
+    "    cache[1][i] = 1\n",
+    "    \n",
+    "N = int(input())\n",
+    "ans = 0\n",
+    "\n",
+    "def f(n, d):\n",
+    "    if not cache[n][d]: \n",
+    "        if d == 0:\n",
+    "            cache[n][d] += cache[n-1][d+1]     \n",
+    "            cache[n][d] %= MOD       \n",
+    "        elif 0 < d < 9:                \n",
+    "            cache[n][d] += cache[n-1][d-1] + cache[n-1][d+1]\n",
+    "            cache[n][d] %= MOD\n",
+    "        elif d == 9:\n",
+    "            cache[n][d] += cache[n-1][d-1]\n",
     "            cache[n][d] %= MOD\n",
     "    \n",
     "    return cache[n][d]\n",
