--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -453,6 +453,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### adjacency matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of vertices : 4,   Number of edges : 4\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dfs_bfs.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(e):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     start, end \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     adj[start][end] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     adj[end][start] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m adj:\n",
+      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "v, e = map(int, input().split())\n",
+    "print(f\"Number of vertices : {v},   Number of edges : {e}\")\n",
+    "print()\n",
+    "\n",
+    "adj = [[0] * v for _ in range(v)]\n",
+    "\n",
+    "for _ in range(e):\n",
+    "    start, end = map(int, input().split())\n",
+    "    adj[start][end] = 1\n",
+    "    adj[end][start] = 1\n",
+    "    \n",
+    "for l in adj:\n",
+    "    print(l)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
