--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -493,8 +493,8 @@
     "\n",
     "for _ in range(e):\n",
     "    start, end = map(int, input().split())\n",
-    "    adj[start][end] = 1\n",
-    "    adj[end][start] = 1\n",
+    "    adj[start-1][end-1] = 1\n",
+    "    adj[end-1][start-1] = 1\n",
     "    \n",
     "for l in adj:\n",
     "    print(l)"
