Implementing adjacency matrix & adjacency list

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -469,18 +469,11 @@
      "output_type": "stream",
      "text": [
       "Number of vertices : 4,   Number of edges : 4\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dfs_bfs.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(e):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     start, end \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     adj[start][end] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     adj[end][start] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X16sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m adj:\n",
-      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+      "\n",
+      "[0, 1, 1, 0]\n",
+      "[1, 0, 1, 0]\n",
+      "[1, 1, 0, 1]\n",
+      "[0, 0, 1, 0]\n"
      ]
     }
    ],
@@ -501,11 +494,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### adjacency list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ' '",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dfs_bfs.ipynb Cell 17\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m adj \u001b[39m=\u001b[39m [[] \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(v)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(e):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     start, end \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m())\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     adj[start\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mappend(end\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     adj[end\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mappend(start\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ' '"
+     ]
+    }
+   ],
+   "source": [
+    "v, e = map(int, input().split())\n",
+    "adj = [[] for _ in range(v)]\n",
+    "\n",
+    "for _ in range(e):\n",
+    "    start, end = map(int, input().split())\n",
+    "    adj[start-1].append(end-1)\n",
+    "    adj[end-1].append(start-1)"
+   ]
   }
  ],
  "metadata": {
