--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -502,29 +502,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ' '",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dfs_bfs.ipynb Cell 17\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m adj \u001b[39m=\u001b[39m [[] \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(v)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(e):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     start, end \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m())\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     adj[start\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mappend(end\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X21sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     adj[end\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mappend(start\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ' '"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v, e = map(int, input().split())\n",
     "adj = [[] for _ in range(v)]\n",
     "\n",
     "for _ in range(e):\n",
     "    start, end = map(int, input().split())\n",
-    "    adj[start-1].append(end-1)\n",
-    "    adj[end-1].append(start-1)"
+    "    adj[start-1].append(end)\n",
+    "    adj[end-1].append(start)\n",
+    "    \n",
+    "for l in adj:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[0, 2]\n",
+      "[0, 1, 3]\n",
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in adj:\n",
+    "    print(l)"
    ]
   }
  ],
