--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -528,6 +528,24 @@
     "for l in adj:\n",
     "    print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [2, 3], 2: [1, 3], 3: [1, 2, 4], 4: [3]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "adj_dict = dict(zip(range(1, v+1), adj))\n",
+    "print(adj_dict)"
+   ]
   }
  ],
  "metadata": {
