Implementing DFS using recursion

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -295,39 +295,41 @@
       "0\n",
       "1\n",
       "\n",
-      "1\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39mprint\u001b[39m(ans)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mprint\u001b[39m(f(N, i))\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     \u001b[39mprint\u001b[39m()\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39m#ans += f(N, i)\u001b[39;00m\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, d\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m cache[n][d]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, d\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, d\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n",
-      "    \u001b[1;31m[... skipping similar frames: f at line 16 (6 times)]\u001b[0m\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD        \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[n][d]\n",
-      "    \u001b[1;31m[... skipping similar frames: f at line 16 (1 times)]\u001b[0m\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD        \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[n][d]\n",
-      "    \u001b[1;31m[... skipping similar frames: f at line 16 (40 times), f at line 19 (39 times)]\u001b[0m\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD        \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[n][d]\n",
-      "    \u001b[1;31m[... skipping similar frames: f at line 16 (7 times)]\u001b[0m\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, d\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m cache[n][d]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m d \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m8\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, d\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, d\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cache[n][d] \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39melif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m:\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10844.ipynb Cell 10\u001b[0m in \u001b[0;36mf\u001b[1;34m(n, d)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mf\u001b[39m(n, d):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m cache[n][d]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         \u001b[39mif\u001b[39;00m d \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10844.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m             cache[n][d] \u001b[39m=\u001b[39m f(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, d\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "1\n",
+      "123728625\n",
+      "\n",
+      "123728626\n",
+      "2\n",
+      "\n",
+      "123728628\n",
+      "2\n",
+      "\n",
+      "123728630\n",
+      "2\n",
+      "\n",
+      "123728632\n",
+      "2\n",
+      "\n",
+      "123728634\n",
+      "2\n",
+      "\n",
+      "123728636\n",
+      "2\n",
+      "\n",
+      "123728638\n",
+      "2\n",
+      "\n",
+      "123728640\n",
+      "1\n",
+      "\n",
+      "\n",
+      "123728641\n"
      ]
     }
    ],
    "source": [
     "MOD = 1_000_000_000\n",
-    "cache = [[0] * 10 for _ in range(1, 101)]\n",
+    "cache = [[0] * 10 for _ in range(101)]\n",
     "\n",
     "for i in range(1, 10):\n",
     "    cache[1][i] = 1\n",
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
        " [999322116, 0, 124406508, 0, 0, 0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
