--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -599,6 +599,85 @@
     "for l in adj:\n",
     "    print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 --->  1\n",
+      " 1 --->  3\n",
+      " 3 --->  7\n",
+      " 7 ---> 13\n",
+      " 7 ---> 14\n",
+      " 1 --->  4\n",
+      " 4 --->  8\n",
+      " 4 --->  9\n",
+      " 0 --->  2\n",
+      " 2 --->  5\n",
+      " 2 --->  6\n",
+      " 6 ---> 10\n",
+      " 6 ---> 11\n",
+      " 6 ---> 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dfs(now):\n",
+    "    for nxt in range(v):\n",
+    "        if adj[now][nxt]:\n",
+    "            print(f\"{now:2d} ---> {nxt:2d}\")\n",
+    "            dfs(nxt)\n",
+    "            \n",
+    "dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1번째 연결은  0 --->  1\n",
+      " 3번째 연결은  1 --->  3\n",
+      " 7번째 연결은  3 --->  7\n",
+      "13번째 연결은  7 ---> 13\n",
+      "14번째 연결은  7 ---> 14\n",
+      " 4번째 연결은  1 --->  4\n",
+      " 8번째 연결은  4 --->  8\n",
+      " 9번째 연결은  4 --->  9\n",
+      " 2번째 연결은  0 --->  2\n",
+      " 5번째 연결은  2 --->  5\n",
+      " 6번째 연결은  2 --->  6\n",
+      "10번째 연결은  6 ---> 10\n",
+      "11번째 연결은  6 ---> 11\n",
+      "12번째 연결은  6 ---> 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dfs(now):\n",
+    "    for i, nxt in enumerate(range(v)):\n",
+    "        if adj[now][nxt]:\n",
+    "            print(f\"{i:2d}번째 연결은 {now:2d} ---> {nxt:2d}\")\n",
+    "            dfs(nxt)\n",
+    "            \n",
+    "dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
