--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -674,10 +674,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v, e = map(int, input().split())\n",
+    "adj = [[0] * v for _ in range(v)]\n",
+    "\n",
+    "for _ in range(e):\n",
+    "    start, end = map(int, input().split())\n",
+    "    adj[start][end] = 1\n",
+    "    \n",
+    "for l in adj:\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 --->  1\n",
+      " 1 --->  5\n",
+      " 5 ---> 12\n",
+      " 5 ---> 13\n",
+      " 5 ---> 14\n",
+      " 1 --->  6\n",
+      " 0 --->  2\n",
+      " 2 --->  3\n",
+      " 3 --->  9\n",
+      " 9 ---> 11\n",
+      " 3 ---> 10\n",
+      " 2 --->  4\n",
+      " 4 --->  7\n",
+      " 7 --->  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dfs(now):\n",
+    "    for nxt in range(v):\n",
+    "        if adj[now][nxt]:\n",
+    "            print(f\"{now:2d} ---> {nxt:2d}\")\n",
+    "            dfs(nxt)\n",
+    "            \n",
+    "dfs(0)"
+   ]
   }
  ],
  "metadata": {
