Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -752,7 +752,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "dy = (0, 1, 0, -1)\n",
+    "dx = (1, 0, -1, 0)\n",
+    "adj = [[0] * 100 for _ in range(100)]\n",
+    "chk = [[False] * 100 for _ in range(100)]\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "def is_coord_valid(y, x):\n",
+    "    return 0 <= y < N and 0 <= x < N\n",
+    "\n",
+    "def bfs(start_y, start_x):\n",
+    "    q = deque()\n",
+    "    q.append((start_y, start_x))\n",
+    "    y, x = q.popleft()\n",
+    "    chk[y][x] = True\n",
+    "    \n",
+    "    for k in range(4):\n",
+    "        ny = y + dy[k]\n",
+    "        nx = x + dx[k]\n",
+    "        if is_co"
+   ]
   }
  ],
  "metadata": {
