Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -774,7 +774,8 @@
     "    for k in range(4):\n",
     "        ny = y + dy[k]\n",
     "        nx = x + dx[k]\n",
-    "        if is_co"
+    "        if is_coord_valid(ny, nx) and not chk[ny][nx]:\n",
+    "            q.append((ny, nx))"
    ]
   }
  ],
