Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -768,14 +768,16 @@
     "def bfs(start_y, start_x):\n",
     "    q = deque()\n",
     "    q.append((start_y, start_x))\n",
-    "    y, x = q.popleft()\n",
-    "    chk[y][x] = True\n",
     "    \n",
-    "    for k in range(4):\n",
-    "        ny = y + dy[k]\n",
-    "        nx = x + dx[k]\n",
-    "        if is_coord_valid(ny, nx) and not chk[ny][nx]:\n",
-    "            q.append((ny, nx))"
+    "    while q:\n",
+    "        y, x = q.popleft()\n",
+    "        chk[y][x] = True\n",
+    "        \n",
+    "        for k in range(4):\n",
+    "            ny = y + dy[k]\n",
+    "            nx = x + dx[k]\n",
+    "            if is_coord_valid(ny, nx) and not chk[ny][nx]:\n",
+    "                q.append((ny, nx))"
    ]
   }
  ],
