Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -771,6 +771,7 @@
     "    \n",
     "    while q:\n",
     "        y, x = q.popleft()\n",
+    "        adj[y][x] = 1\n",
     "        chk[y][x] = True\n",
     "        \n",
     "        for k in range(4):\n",
