Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
     "adj = [[0] * 100 for _ in range(100)]\n",
     "chk = [[False] * 100 for _ in range(100)]\n",
     "\n",
-    "N = int(input())\n",
+    "upper, lower, left, right = map(int, input().split())\n",
     "\n",
     "def is_coord_valid(y, x):\n",
     "    return 0 <= y < N and 0 <= x < N\n",
