Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -763,7 +763,7 @@
     "upper, lower, left, right = map(int, input().split())\n",
     "\n",
     "def is_coord_valid(y, x):\n",
-    "    return 0 <= y < N and 0 <= x < N\n",
+    "    return lower <= y < upper and left <= x < right\n",
     "\n",
     "def bfs(start_y, start_x):\n",
     "    q = deque()\n",
