Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,6 +779,15 @@
     "            nx = x + dx[k]\n",
     "            if is_coord_valid(ny, nx) and not chk[ny][nx]:\n",
     "                q.append((ny, nx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bfs(30, 30)"
    ]
   }
  ],
