Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
     "    q = deque()\n",
     "    q.append((start_y, start_x))\n",
     "    \n",
-    "    while q:\n",
+    "    while len(q) > 0:\n",
     "        y, x = q.popleft()\n",
     "        adj[y][x] = 1\n",
     "        chk[y][x] = True\n",
@@ -787,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bfs(30, 30)"
+    "bfs()"
    ]
   }
  ],
