Visualizing fulfilling a set of path using bfs

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -826,6 +826,43 @@
     "for l in adj:\n",
     "    print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, True, True, True, True, True, True, True, True, True, True, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in chk:\n",
+    "    print(l)"
+   ]
   }
  ],
  "metadata": {
